# awtk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SConstruct  TODO.md  awtk_config.py  format.sh
3rd/: CMakeLists.txt
3rd/SDL/: CMakeLists.txt  SConscript
3rd/bgfx/: SConscript
3rd/glad/: CMakeLists.txt  glad.c
3rd/gpinyin/: CMakeLists.txt  SConscript
3rd/libunibreak/: CMakeLists.txt  linebreak.c
3rd/nanovg/: CMakeLists.txt  SConscript
demos/: CMakeLists.txt  CvxText.cpp  CvxText.h  FaceRecognition.cpp  README.md  SConscript  assets-1m.c  assets.c  assets.h  awtk_show.cpp  common.inc  demo1_app.c  demo_animator_app.c  demo_desktop.c  demo_main.c  demo_thread_app.c  demo_tr_app.c  demo_ui_app.c  demo_vg_app.c  draw_framebuffer.c  draw_framebuffer.h  faceReconition.cpp  frambuffer.c  infor.txt  live.c  mtcnn.cpp  mtcnn.h  mutable_image.c  new_frambuffer.c  preview_ui.c  takePic.cpp  test_mtcnn.cpp  test_opencv.cpp  trainModel.cpp  vg_common.inc  video_capture.c  video_capture.h
demos/model/: MyFaceFisherModel.xml  det2.prototxt
docs/: api_doc.md  (+32 more)
src/: CMakeLists.txt  README.md  SConscript  awtk.h  awtk_base.h  awtk_ext_widgets.h  awtk_global.c  awtk_global.h  awtk_tkc.h  awtk_widgets.h
src/base/: assets_manager.c  assets_manager.h  awtk_config_sample.h  bitmap.c  bitmap.h  children_layouter.c  children_layouter.h  children_layouter_factory.h  clip_board.c  clip_board.h  enums.c  enums.h  event_queue.c  event_queue.h  events.c  events.h  font.c  font.h  font_loader.c  font_loader.h  font_manager.c  font_manager.h  glyph_cache.c  glyph_cache.h  idle.c  idle.h  idle_info.c  idle_info.h  idle_manager.c  idle_manager.h  image_base.c  image_loader.c  image_loader.h  image_manager.c  image_manager.h  input_engine.c  input_engine.h  input_method.c  input_method.h  keys.h  (+59 more)
src/blend/: blend_image.inc  blend_image_bgr565_bgr565.c  blend_image_bgr565_bgr565.h  blend_image_bgr565_bgra8888.c  blend_image_bgr565_bgra8888.h  blend_image_bgr565_rgba8888.c  blend_image_bgr565_rgba8888.h  blend_image_bgr888_bgr565.c  blend_image_bgr888_bgr565.h  blend_image_bgr888_bgra8888.c  blend_image_bgr888_bgra8888.h  blend_image_bgr888_rgba8888.c  blend_image_bgr888_rgba8888.h  blend_image_bgra8888_bgr565.c  blend_image_bgra8888_bgr565.h  blend_image_bgra8888_bgra8888.c  blend_image_bgra8888_bgra8888.h  blend_image_bgra8888_rgba8888.c  blend_image_bgra8888_rgba8888.h  blend_image_rgb565_bgr565.c  blend_image_rgb565_bgr565.h  blend_image_rgb565_bgra8888.c  blend_image_rgb565_bgra8888.h  blend_image_rgb565_rgba8888.c  blend_image_rgb565_rgba8888.h  blend_image_rgba8888_bgr565.c  blend_image_rgba8888_bgr565.h  blend_image_rgba8888_bgra8888.c  blend_image_rgba8888_bgra8888.h  blend_image_rgba8888_rgba8888.c  blend_image_rgba8888_rgba8888.h  fill_image.inc  fill_image_bgr565.c  fill_image_bgr565.h  fill_image_bgr888.c  fill_image_bgr888.h  fill_image_bgra8888.c  fill_image_bgra8888.h  fill_image_rgb565.c  fill_image_rgb565.h  (+18 more)
src/clip_board/: clip_board_default.c  clip_board_sdl.c
src/designer_support/: style_mutable.c  style_mutable.h
src/ext_widgets/: README.md  ext_widgets.c  ext_widgets.h
src/font_loader/: font_loader_bitmap.c  font_loader_bitmap.h  font_loader_stb.c  font_loader_stb.h  font_loader_truetype.h
src/image_loader/: image_loader_stb.c  image_loader_stb.h
src/input_engines/: input_engine_null.c  input_engine_null.h  input_engine_pinyin.cpp  input_engine_pinyin.h
src/input_methods/: input_method_creator.c  input_method_default.h  input_method_default.inc  input_method_null.h  input_method_null.inc  input_method_sdl.h  input_method_sdl.inc  suggest_words.inc
src/layouters/: children_layouter_default.c  children_layouter_default.h  children_layouter_factory.c  children_layouter_factory.h  self_layouter_default.c  self_layouter_default.h  self_layouter_factory.c  self_layouter_factory.h
src/lcd/: gen.sh  lcd_nanovg.c  lcd_vgcanvas.inc
src/main_loop/: main_loop_raw.inc  main_loop_simple.c  sdl2_common.inc
src/misc/: new.cpp  new.hpp
src/svg/: bsvg.c  bsvg.h  bsvg_builder.c  bsvg_builder.h  bsvg_common.h  bsvg_draw.c  bsvg_draw.h  bsvg_to_svg.c  bsvg_to_svg.h  svg_path.c  svg_path.h  svg_path_parser.c  svg_path_parser.h  svg_shape.c  svg_shape.h  svg_to_bsvg.c  svg_to_bsvg.h
src/tkc/: buffer.c  buffer.h  color.c  color.h  color_parser.c  color_parser.h  darray.c  darray.h  date_time.c  date_time.h  easing.c  easing.h  emitter.c  emitter.h  event.c  event.h  expr_eval.c  expr_eval.h  fs.c  fs.h  func_call_parser.c  func_call_parser.h  int_str.c  int_str.h  matrix.c  matrix.h  mem.c  mem.h  mutex.h  named_value.c  named_value.h  object.c  object.h  object_default.c  object_default.h  path.c  path.h  platform.h  rect.c  rect.h  (+19 more)
src/ui_loader/: ui_binary_writer.c  ui_binary_writer.h  ui_builder_default.c  ui_builder_default.h  ui_loader_default.c  ui_loader_default.h  ui_loader_xml.c  ui_loader_xml.h  ui_serializer.c  ui_serializer.h  ui_xml_writer.c  ui_xml_writer.h  window_open.c
src/vgcanvas/: texture.inc  vgcanvas_nanovg.inc  vgcanvas_nanovg_bgfx.c  vgcanvas_nanovg_bgfx.inc  vgcanvas_nanovg_gl.c  vgcanvas_nanovg_gl.inc  vgcanvas_nanovg_soft.c  vgcanvas_nanovg_soft.inc  vgcanvas_null.c
src/widget_animators/: widget_animator_factory.c  widget_animator_move.h  widget_animator_opacity.h  widget_animator_prop.c  widget_animator_prop.h  widget_animator_prop2.c  widget_animator_prop2.h  widget_animator_rotation.h  widget_animator_scale.h  widget_animator_scroll.c  widget_animator_scroll.h  widget_animator_value.h
src/widgets/: app_bar.c  button.c  button_group.c  calibration_win.c  check_button.c  color_tile.c  column.c  combo_box_item.c  dialog.c  dialog_client.c  dialog_title.c  dragger.c  edit.c  grid.c  grid_item.c  group_box.c  image.c  label.c  pages.c  popup.c  progress_bar.c  row.c  slider.c  system_bar.c  tab_button.c  tab_button_group.c  tab_control.c  view.c  window.c
src/window_animators/: bottom_to_top.inc  center_scale.inc  common.inc  fade.inc  htranslate.inc  top_to_bottom.inc  vtranslate.inc  window_animator_fb.c  window_animator_gpu.c  (+1 more)
(+525 files in other folders)
